---------------------------
  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano

---------------------------
  Jackdmp changes log
---------------------------

2008-04-03 Stephane Letz  <letz@grame.fr>
		
	* Correct a dirty port array issue in JackGraphManager::GetPortsAux.

2008-03-31 Stephane Letz  <letz@grame.fr>
		
	* New SetNonBlocking method for JackSocket.

2008-03-29 Stephane Letz  <letz@grame.fr>
		
	* Correct a missing parameter in the usage message of jack_midiseq.
	* Add a client counter in wrapper layer : library is unloaded only when all clients have been closed.

2008-03-28 Stephane Letz  <letz@grame.fr>
		
	* Correct PortRegister, port name checking must be done on server side.
	* Add an Init method for blocking drivers to be decorated using JackThreadedDriver class.

2008-03-27 Stephane Letz  <letz@grame.fr>
		
	* Pieter Palmers patch for FFADO driver.
	* Dmitry Baikov patch for alsa_rawmidi driver.

2008-03-26 Stephane Letz  <letz@grame.fr>
		
	* JackWrapperAPI.cpp: use open_library in jack_client_name_size, jack_port_name_size and jack_port_type_size.

2008-03-20 Stephane Letz  <letz@grame.fr>
		
	* Transport timebase fix.

2008-03-19 Stephane Letz  <letz@grame.fr>
		
	* Synchronise transport.h with latest jackd version (Video handling).

2008-03-17 Stephane Letz  <letz@grame.fr>
		
	* New jack_server_control client to test notifications when linked to the server library.
	* Correct JackClient::Activate so that first kGraphOrderCallback can be received by the client notification thread.
	* MIDI API in wrapper lib.
	* Fix connect notification to deliver *one* notification only.

2008-03-16 Stephane Letz  <letz@grame.fr>
		
	* Use engine in JackAlsaDriver::port_register and JackAlsaDriver::port_unregister.