@@ -20,6 +20,10 @@ Fernando Lopez-Lezcano
   Jackdmp changes log
 ---------------------------
 
+2008-04-10 Stephane Letz  <letz@grame.fr>
+		
+	* Remove Linux Makefile, update Readme.
+
 2008-04-03 Stephane Letz  <letz@grame.fr>
 		
 	* Correct a dirty port array issue in JackGraphManager::GetPortsAux.
